[package]
name = "serv"
version = "0.1.0"
authors = ["yjh0502 <yjh0502@gmail.com>"]

[dependencies]
bytes = "0.4"
error-chain = "0.11"
futures = "0.1"
hyper = "0.11"
log = "0.4"
net2 = "0.2"
regex = "0"
serde = "1"
serde_derive = "1"
serde_json = "1"
serde_qs = "0.4"
tokio-core = "0.1"
tokio-io = "0.1"
url = "1"

[dev-dependencies]
tokio-timer = "0.1"
