[package]
name = "serv"
version = "0.1.12"
authors = ["yjh0502 <yjh0502@gmail.com>"]

description = """
oneshot-style HTTP API builder
"""

repository = "https://github.com/yjh0502/serv"
license = "MIT/Apache-2.0"

readme = "README.md"
keywords = ["http"]

[badges]
travis-ci = { repository = "yjh0502/serv" }

[dependencies]
bytes = "0.4"
error-chain = "0.12"
futures = "0.1"
h2 = "0.1"
http = "0.1"
hyper = { version = "0.11", features = ["compat"] }
log = "0.4"
net2 = "0.2"
regex = "0"
serde = "1"
serde_derive = "1"
serde_json = "1"
serde_qs = "0.4"
tokio-core = "0.1"
tokio-io = "0.1"
tokio-uds = { version = "0.2", optional = true }
url = "1"

[dev-dependencies]
tokio-timer = "0.1"

[features]
uds = ["tokio-uds"]
